--- a/src/components/molecules/sections/Section.module.css
+++ b/src/components/molecules/sections/Section.module.css
@@ -1,6 +1,7 @@
 .imageText, .textImage {
     max-width: 75em;
     margin: 2em auto;
+    padding-bottom: 2em;
     overflow: hidden;
 }
 
