--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -10,9 +10,10 @@ html {
 }
 
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     min-width: 320px;
+    max-width: 90em;
     background-color: var(--bg2);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
